--- a/UserManagementMVCExample/appsettings.json
+++ b/UserManagementMVCExample/appsettings.json
@@ -9,5 +9,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BrainTree": {
+    "Environment": "sandbox",
+    "MerchantId": "skc94g772b9th528",
+    "PublicKey": "mc738f6ptk2j9rbk",
+    "PrivateKey": "50b4b6e811f44e5673604204c6cfaffd"
+  }
+
 }
