--- a/UserManagementMVCExample/appsettings.json
+++ b/UserManagementMVCExample/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-UserManagementMVCExample-BD94FD15-E77C-4724-AF88-789A2FB398E5;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AzureConnection": "Data Source=tcp:lotusdbserver.database.windows.net,1433;Initial Catalog=Lotus_db;User Id=azureuser@lotusdbserver;Password=Hophopapa8!"
   },
   "Logging": {
     "LogLevel": {
